Add hard power limit, always enforced independent of autotune
